tests/fixtures/errors/extra_struct_fields.gcl
type Orbit { altitude: Length, speed: Velocity }
node o: Orbit = Orbit { altitude: 400 km, speed: 7.6 km / s, bonus: 1.0 };
